new func from private work